discussion/kv_engine/165334/165334_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47687: Add triggerImplicitCompaction and createCheckpoint to MockMagmaKVStore

Both these APIs are meant to be used for testing.
triggerImplicitCompaction will make it easier to test
Magma's background compaction. Atm we write a bunch of
tiny files to do this.
newCheckpoint will us to test Magma's rollback without
having to create a rollback point for every write.

Change-Id: Ib1b77e0acae06d698ac61a5329944414981bf3d7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Apaar gupta
Date: 2021-11-09 09:50:39.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-09 09:56:53.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35358/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35358/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41639/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41639/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3584/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3584/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15495/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15495/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15778/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15778/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16471/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23836/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23836/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13877/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19: error: no member named "TriggerImplicitCompaction" in "magma::Magma" [clang-diagnostic-error]
    return magma->TriggerImplicitCompaction(kvID);
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13877/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19:
error: no member named "TriggerImplicitCompaction" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13877/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14667/ : FAILURE

Compile error at [2021-11-09T09:54:56.059Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19:
error: no member named "TriggerImplicitCompaction" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14667/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3512/ : FAILURE

Compile error at [2021-11-09T09:54:44.324Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19:
error: no member named "TriggerImplicitCompaction" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3512/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12679/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
